# ft_vox

./: .gitignore  CMakeLists.txt  Makefile  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  README  Shader.cpp  Shader.hpp  build.sh  camera.cpp  camera.h  doc  glad.cpp  glad_generation_script.sh  main.cpp  objloader.cpp  objloader.h  stb_image_loader.cpp
Libraries/include/assimp/: revision.h
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
Maths/: c_math_inc.hpp  exponential.hpp  geometric.hpp  matrix.hpp  matrix_clip_space.hpp  matrix_transform.hpp  trigonometric.hpp  type_ptr.hpp  vector.hpp
Models/box/: cube.mtl
Shaders/: 3.3.shader.frag  3.3.shader.fs  3.3.shader.vert  3.3.shader.vs  direc_light.frag  flash_light.frag  flash_light.vert  light.frag  lighting.frag  lighting.vert
Sources/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.hpp  camera.cpp  camera.h  main.cpp
include/: App.hpp  BitPackedArray.hpp  Block.hpp  Camera.hpp  Chunk.hpp  Noise.hpp  Renderer.hpp  Shader.hpp  Skybox.hpp  TerrainParams.hpp  World.hpp
shaders/: gradient.frag  gradient.vert  simple.frag  simple.vert  simpleWireframe.frag  skybox.frag  skybox.vert
src/: App.cpp  BitPackedArray.cpp  Block.cpp  Camera.cpp  Chunk.cpp  Noise.cpp  Renderer.cpp  Shader.cpp  Skybox.cpp  World.cpp  main.cpp
